2001-02-28  Akim Demaille  <akim@epita.fr>

	* automake.in (&handle_configure): Fortunately, $top_reldir,
	which definition was highly suspicious, was useless.

2001-02-27  Akim Demaille  <akim@epita.fr>

	* automake.in (%exec_dir_p): Move at the top so that it is visible
	to all routines.

2001-02-27  Pavel Roskin  <proski@gnu.org>

	* tests/yaccvpath.test: Prevent automake from looking into ..
	and ../.. by using AC_CONFIG_AUX_DIR in configure.in.

2001-02-27  Akim Demaille  <akim@epita.fr>

	* automake.in (%exec_dir_p): Pulled out from...
	(&am_primary_prefixes): here.

2001-02-27  Akim Demaille  <akim@epita.fr>

	* automake.in (&usage): Display $0, not $me.

2001-02-27  Akim Demaille  <akim@epita.fr>

	* mans.am: s/INSTALL_MAN/INSTALL-MAN/.
	* automake.in (&handle_clean): Don't escape what's given to
	&transform.

2001-02-27  Akim Demaille  <akim@epita.fr>

	Distinguish automake substitutions from config.status
	substitutions.

	* automake.in (&add_depend2): Transform AMDEP.
	(&handle_clean): Transform MCFILES and MFILES.
	(&file_contents): Transform MAINTAINER_MODE.
	(&transform, &am_install_var): Use `%', not `@'.
	Adjust all the *.am files.
	* clean.am: Use ?MFILES? instead of ad hoc MAINTAINERCLEAN.
	* depend2.am: Display the double dependency on both ?AMDEP? and
	@AMDEP@.

2001-02-27  Tom Tromey  <tromey@redhat.com>

	* distdir.am (distcheck): Fixed new code.

	* tests/yaccvpath.test: Fail gracefully if bison/flex not found.
	Only configure once.

	* distdir.am (distcheck): Print error message if distclean failed
	to fully clean.

2001-02-27  Pavel Roskin  <proski@gnu.org>

	* tests/Makefile.am (TESTS): s/yaccpvath/yaccvpath/.

2001-02-25  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* tests/Makefile.am (TESTS): Added yaccvpath.test.
	* tests/yaccvpath.test: New file.

2001-02-26  Akim Demaille  <akim@epita.fr>

	* automake.in (&am_install_var): Recognize whether predefined
	directories are `data' or `exec'.