@@ -1,5 +1,9 @@
 2001-02-28  Akim Demaille  <akim@epita.fr>
 
+	* Makefile.am (maintainer-check): `undef $/' is OK.
+
+2001-02-28  Akim Demaille  <akim@epita.fr>
+
 	* automake.in (&handle_configure): Fortunately, $top_reldir,
 	which definition was highly suspicious, was useless.
 
